agents/nndss-agent/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nndss-agent
  labels:
    app.kubernetes.io/name: nndss-agent
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: 8080
  selector:
    app.kubernetes.io/name: nndss-agent
  type: ClusterIP
