agents/nndss-agent/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nndss-agent
  labels:
    app.kubernetes.io/name: nndss-agent
  annotations:
    haproxy.router.openshift.io/timeout: "600s"
spec:
  to:
    kind: Service
    name: nndss-agent
    weight: 100
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
